--- a/Static-Page/index.html
+++ b/Static-Page/index.html
@@ -4,16 +4,14 @@
         <meta name="Author" content="Andrew Parry">
         <meta charset="utf-8">
         <title>TODO Static Page</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <!--<link rel="stylesheet" type="text/css" href="style.css">-->
     </head>
     <body>
         <h2>To Do list:</h2>
         <ul id="list">
-            
         </ul>
         <input type="text" id="add" name="add">
-        <button onclick="AddElement()">Add Item To List</button><br><br>
-        <!-- button onclick="RemoveElement()">Remove Checked Items</button -->
+        <button onclick="CreateItem()">Add Item To List</button>
         <script src="script.js"></script>
     </body>
 </html>
