renamed V1 folder, finished V2, much nicer

--- a/static-page-V1/index.html
+++ b/static-page-V1/index.html
@@ -3,8 +3,7 @@
     <head>
         <meta name="Author" content="Andrew Parry">
         <meta charset="utf-8">
-        <title>TODO Static Page</title>
-        <!--<link rel="stylesheet" type="text/css" href="style.css">-->
+        <title>Static Page V1</title>
     </head>
     <body>
         <h2>To Do list:</h2>
@@ -12,6 +11,6 @@
         </ul>
         <input type="text" id="add" name="add">
         <button onclick="CreateItem()">Add Item To List</button>
-        <script src="script.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
